[project]
name = "sber_bulb_api"
version = "0.0.1"
description = "API wrapper for controlling the Sber smart bulb (Tuya smart bulb A60)."
authors = [
    { name = "regenara", email = "jakebv.22@gmail.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "pyjwt>=2.0.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "aiohttp>=3.0.0,<4.0.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
