[project]
name = "sber_bulb_api"
version = "0.0.6"
description = "API wrapper for controlling the Sber smart bulb A60."
authors = [
    { name = "regenara", email = "jakebv.22@gmail.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "pyjwt>=2.0.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "aiohttp>=3.0.0,<4.0.0"
]
dynamic = ["readme"]

[project.urls]
repository = "https://github.com/regenara/sber_bulb_api"
homepage = "https://github.com/regenara/sber_bulb_api"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
